<resources>
    <string name="app_name">Typing</string>
    <string name="typing">Typing.</string>
    <string name="ranking">랭킹</string>
    <string name="time_attack">타임어택</string>
    <string name="normal_practice">일반연습</string>
    <string name="time_limit">제한시간</string>
    <string name="cur_tpm">현재타수</string>
    <string name="pls_type">문장을 입력하세요</string>
    <string name="aver_tpm">평균타수</string>
    <string name="stop_game">그만두기</string>
    <string name="timer_icon_desc">this is timer icon</string>
    <string name="ranking1">RANKING</string>
    <string name="login">로그인</string>
    <string name="email">Email</string>
    <string name="pls_type_email">이메일 입력</string>
    <string name="pw">PW</string>
    <string name="pls_type_pw">비밀번호 입력</string>
    <string name="do_signup">회원가입하기</string>
    <string name="offline_play">오프라인 플레이</string>
    <string name="game_result">게임 결과</string>
    <string name="is_offline">오프라인 모드입니다.</string>
</resources>